Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto minus, non eveniet repellendus qui labore modi earum mollitia eaque obcaecati voluptas tempore ratione id inventore eius in ex corporis? Perspiciatis.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aspernatur! Qui accusamus ut magni! Fugiat quia at unde sunt iusto et dignissimos, eius quam mollitia sapiente ullam tempora inventore illum.</p>
         </article>
     </main>
 </body>
